# aoc-2015

./: .pre-commit-config.yaml  Cargo.toml  README.md  justfile
benches/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
puzzle/: day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md  day20.md  day21.md  day22.md  day23.md  day24.md  day25.md
src/: aoc_io.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs  parse.rs
template/: bench_dayXX.rs.in  dayXX.rs.in
