[package]
name = "aoc2015"
version = "0.1.0"
authors = ["Michael Adler <therisen06@gmail.com>"]
edition = "2021"

[lib]
name = "aoc2015"
path = "src/lib.rs"

[[bin]]
name = "aoc2015"
path = "src/main.rs"

[dependencies]
log = { version = "0.4.0", features = ["release_max_level_warn"] }
env_logger = { version = "0.10.0", default-features=false, features = ["auto-color", "humantime"] }
ahash = "0.8"
md5 = "0.7.0"
serde_json = "1.0.79"
serde = "1.0.136"
arrayvec = "0.7.2"
compact_str = "0.7.0"
num-prime = "0.4.1"
permutator = "0.4.3"

[dependencies.aoc-lib]
git = "https://github.com/michaeladler/aoc-lib.git"

[dev-dependencies]
criterion = "0.5"

[profile.release]
# see https://github.com/johnthagen/min-sized-rust
lto = "fat"       # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic

[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false

[[bench]]
name = "day04"
harness = false

[[bench]]
name = "day05"
harness = false

[[bench]]
name = "day06"
harness = false

[[bench]]
name = "day07"
harness = false

[[bench]]
name = "day08"
harness = false

[[bench]]
name = "day09"
harness = false

[[bench]]
name = "day10"
harness = false

[[bench]]
name = "day11"
harness = false

[[bench]]
name = "day12"
harness = false

[[bench]]
name = "day13"
harness = false

[[bench]]
name = "day14"
harness = false

[[bench]]
name = "day15"
harness = false

[[bench]]
name = "day16"
harness = false

[[bench]]
name = "day17"
harness = false

[[bench]]
name = "day18"
harness = false

[[bench]]
name = "day19"
harness = false

[[bench]]
name = "day20"
harness = false

[[bench]]
name = "day21"
harness = false

[[bench]]
name = "day22"
harness = false

[[bench]]
name = "day23"
harness = false

[[bench]]
name = "day24"
harness = false

[[bench]]
name = "day25"
harness = false
